--- a/index.html
+++ b/index.html
@@ -141,7 +141,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     
     <style>
-        body { font-family: 'Inter', sans-serif; }
+        html, body { 
+            font-family: 'Inter', sans-serif; 
+            overflow-x: hidden;
+            max-width: 100vw;
+        }
         :root {
             --color-primary: #DC2626;
             --color-secondary: #1F2937;
