--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </div>
 
     <!-- Hero Section -->
-    <section class="relative h-screen flex items-center justify-center overflow-hidden">
+    <section class="relative min-h-screen flex items-center justify-center overflow-hidden py-24 md:py-0">
         <div class="absolute inset-0 z-0">
             <img src="images/grafika.webp" alt="Profesjonalny warsztat samochodowy Autodiament w Szczecinie - naprawa powypadkowa" class="w-full h-full object-cover">
             <div class="absolute inset-0 hero-overlay"></div>
@@ -300,22 +300,22 @@
             </div>
             
             <!-- Trust Indicators -->
-            <div class="mt-16 grid grid-cols-2 md:grid-cols-4 gap-8 max-w-4xl mx-auto">
+            <div class="mt-8 md:mt-16 grid grid-cols-2 md:grid-cols-4 gap-4 md:gap-8 max-w-4xl mx-auto">
                 <div class="text-center" data-aos="fade-up" data-aos-delay="100">
-                    <div class="text-4xl font-bold text-red-600" data-ru="hero-stat-1">Wieloletnie</div>
-                    <div class="text-sm text-gray-300" data-ru="hero-stat-1-desc">doświadczenie</div>
+                    <div class="text-2xl md:text-4xl font-bold text-red-600" data-ru="hero-stat-1">Wieloletnie</div>
+                    <div class="text-xs md:text-sm text-gray-300" data-ru="hero-stat-1-desc">doświadczenie</div>
                 </div>
                 <div class="text-center" data-aos="fade-up" data-aos-delay="200">
-                    <div class="text-4xl font-bold text-red-600" data-ru="hero-stat-2">1000+</div>
-                    <div class="text-sm text-gray-300" data-ru="hero-stat-2-desc">zadowolonych klientów</div>
+                    <div class="text-2xl md:text-4xl font-bold text-red-600" data-ru="hero-stat-2">1000+</div>
+                    <div class="text-xs md:text-sm text-gray-300" data-ru="hero-stat-2-desc">zadowolonych klientów</div>
                 </div>
                 <div class="text-center" data-aos="fade-up" data-aos-delay="300">
-                    <div class="text-4xl font-bold text-red-600" data-ru="hero-stat-3">100%</div>
-                    <div class="text-sm text-gray-300" data-ru="hero-stat-3-desc">profesjonalizm</div>
+                    <div class="text-2xl md:text-4xl font-bold text-red-600" data-ru="hero-stat-3">100%</div>
+                    <div class="text-xs md:text-sm text-gray-300" data-ru="hero-stat-3-desc">profesjonalizm</div>
                 </div>
                 <div class="text-center" data-aos="fade-up" data-aos-delay="400">
-                    <div class="text-4xl font-bold text-red-600" data-ru="hero-stat-4">100%</div>
-                    <div class="text-sm text-gray-300" data-ru="hero-stat-4-desc">gwarancja jakości</div>
+                    <div class="text-2xl md:text-4xl font-bold text-red-600" data-ru="hero-stat-4">100%</div>
+                    <div class="text-xs md:text-sm text-gray-300" data-ru="hero-stat-4-desc">gwarancja jakości</div>
                 </div>
             </div>
         </div>
